--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -554,11 +554,372 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Quick spike to show mathematical trick in self attention</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# consider the following toy example:\n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,2 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is an explicit example of the concept of using average to add context of the past but inneficient, that is where the matrix multiplication comes in\n",
+    "# We want x[b,t] = mean_{i<=t} x[b,i]\n",
+    "xbow = torch.zeros((B,T,C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b,:t+1] # (t,C)\n",
+    "        xbow[b,t] = torch.mean(xprev, 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=\n",
+      "tensor([[1.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.5000, 0.0000],\n",
+      "        [0.3333, 0.3333, 0.3333]])\n",
+      "--\n",
+      "b=\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "--\n",
+      "c=\n",
+      "tensor([[2.0000, 7.0000],\n",
+      "        [4.0000, 5.5000],\n",
+      "        [4.6667, 5.3333]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# toy example illustrating how matrix multiplication can be used for a \"weighted aggregation\"\n",
+    "torch.manual_seed(42)\n",
+    "a = torch.tril(torch.ones(3, 3))\n",
+    "a = a / torch.sum(a, 1, keepdim=True)\n",
+    "b = torch.randint(0,10,(3,2)).float()\n",
+    "c = a @ b\n",
+    "print('a=')\n",
+    "print(a)\n",
+    "print('--')\n",
+    "print('b=')\n",
+    "print(b)\n",
+    "print('--')\n",
+    "print('c=')\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 2: using matrix multiply for a weighted aggregation\n",
+    "# you can see its equal to the inneficent version above\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True)\n",
+    "xbow2 = wei @ x # (B, T, T) @ (B, T, C) ----> (B, T, C)\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "54 min is about where i stopped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 3: use Softmax\n",
+    "# xbow3 = xbow2 = xbow1\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x\n",
+    "torch.allclose(xbow, xbow3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 4: self-attention!\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,32 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "\n",
+    "# let's see a single Head perform self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x)   # (B, T, 16)\n",
+    "q = query(x) # (B, T, 16)\n",
+    "wei =  q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) ---> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "#wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "#out = wei @ x\n",
+    "\n",
+    "out.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Attention is a **communication mechanism**. Can be seen as nodes in a directed graph looking at each other and aggregating information with a weighted sum from all nodes that point to them, with data-dependent weights.\n",
+    "- There is no notion of space. Attention simply acts over a set of vectors. This is why we need to positionally encode tokens.\n",
+    "- Each example across batch dimension is of course processed completely independently and never \"talk\" to each other\n",
+    "- In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This block here is called a \"decoder\" attention block because it has triangular masking, and is usually used in autoregressive settings, like language modeling.\n",
+    "- \"self-attention\" just means that the keys and values are produced from the same source as queries. In \"cross-attention\", the queries still get produced from x, but the keys and values come from some other, external source (e.g. an encoder module)\n",
+    "- \"Scaled\" attention additional divides `wei` by 1/sqrt(head_size). This makes it so when input Q,K are unit variance, wei will be unit variance too and Softmax will stay diffuse and not saturate too much. Illustration below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = torch.randn(B,T,head_size)\n",
+    "q = torch.randn(B,T,head_size)\n",
+    "wei = q @ k.transpose(-2, -1) * head_size**-0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0449)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0700)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0918)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5])*8, dim=-1) # gets too peaky, converges to one-hot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class LayerNorm1d: # (used to be BatchNorm1d)\n",
+    "  \n",
+    "  def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
+    "    self.eps = eps\n",
+    "    self.gamma = torch.ones(dim)\n",
+    "    self.beta = torch.zeros(dim)\n",
+    "  \n",
+    "  def __call__(self, x):\n",
+    "    # calculate the forward pass\n",
+    "    xmean = x.mean(1, keepdim=True) # batch mean\n",
+    "    xvar = x.var(1, keepdim=True) # batch variance\n",
+    "    xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance\n",
+    "    self.out = self.gamma * xhat + self.beta\n",
+    "    return self.out\n",
+    "  \n",
+    "  def parameters(self):\n",
+    "    return [self.gamma, self.beta]\n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "module = LayerNorm1d(100)\n",
+    "x = torch.randn(32, 100) # batch size 32 of 100-dimensional vectors\n",
+    "x = module(x)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[:,0].mean(), x[:,0].std() # mean,std of one feature across all batch inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[0,:].mean(), x[0,:].std() # mean,std of a single input from the batch, of its features"
+   ]
   }
  ],
  "metadata": {
